[package]
name = "espmonitor-gui"
version = "0.1.0"
edition = "2021"
description = "A minimal gui for espmonitor"
authors = ["Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
license = "GPL-3.0+"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
espmonitor = "0.6.2"
klask = "1.0.0"
